--- a/config/west.yml
+++ b/config/west.yml
@@ -2,9 +2,11 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: ftc
+      url-base: https://github.com/ftc
   projects:
     - name: zmk
-      remote: zmkfirmware
+      remote: ftc
       revision: main
       import: app/west.yml
   self:
