--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,6 +5,6 @@
 CONFIG_ZMK_MOUSE=y
 
 # Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
-# CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-# CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
