--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,5 +9,6 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
-CONFIG_ZMK_SLEEP=y # Enable deep sleep support
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000 # Milliseconds of inactivity before entering deep sleep
+# CONFIG_ZMK_IDLE_TIMEOUT=30000
+# CONFIG_ZMK_SLEEP=y # Enable deep sleep support
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000 # Milliseconds of inactivity before entering deep sleep
