--- a/config/includes/behaviors_holdtaps.dtsi
+++ b/config/includes/behaviors_holdtaps.dtsi
@@ -41,6 +41,16 @@
             flavor = "balanced";
             bindings = <&kp>, <&kp>;
         };
+
+        layer_ht: layer_hold_tap {
+            compatible = "zmk,behavior-hold-tap";
+            label = "layer_hold_tap";
+            #binding-cells = <2>;
+            tapping-term-ms = <220>;
+            quick-tap-ms = <100>;
+            flavor = "balanced";
+            bindings = <&mo>, <&kp>;
+        };
     };
     
 };
