--- a/config/west.yml
+++ b/config/west.yml
@@ -2,6 +2,8 @@ manifest:
   remotes:
     - name: urob
       url-base: https://github.com/urob
+    - name: dhruvinsh
+      url-base: https://github.com/dhruvinsh
   projects:
     - name: zmk
       remote: urob
