Further mouse fix according to urob's commit
https://github.com/urob/zmk-config/commit/616ffd2ffbaa22390bb31041ca291274bd9c196f

--- a/config/includes/mouse.dtsi
+++ b/config/includes/mouse.dtsi
@@ -27,10 +27,10 @@
 #undef SCROLL_DOWN
 #undef SCROLL_LEFT
 #undef SCROLL_RIGHT
-#define SCROLL_UP SCROLL_Y(U_MOUSE_SCROLL_MAX)
-#define SCROLL_DOWN SCROLL_Y(-U_MOUSE_SCROLL_MAX)
-#define SCROLL_LEFT SCROLL_X(-U_MOUSE_SCROLL_MAX)
-#define SCROLL_RIGHT SCROLL_X(U_MOUSE_SCROLL_MAX)
+#define SCROLL_UP SCRL_Y(U_MOUSE_SCROLL_MAX)
+#define SCROLL_DOWN SCRL_Y(-U_MOUSE_SCROLL_MAX)
+#define SCROLL_LEFT SCRL_X(-U_MOUSE_SCROLL_MAX)
+#define SCROLL_RIGHT SCRL_X(U_MOUSE_SCROLL_MAX)
 
 #define MOUSE_LCLK &mkp LCLK
 #define MOUSE_RCLK &mkp RCLK
