Further mouse fix, again
https://github.com/urob/zmk-config/commit/b5212cbba58ffe72751c57ebcc4b37dc0351a066

--- a/config/west.yml
+++ b/config/west.yml
@@ -7,7 +7,7 @@ manifest:
   projects:
     - name: zmk
       remote: urob
-      revision: main-with-native-mouse
+      revision: mai
       import: app/west.yml
     - name: zmk-tri-state
       remote: dhruvinsh
