--- a/config/includes/mouse.dtsi
+++ b/config/includes/mouse.dtsi
@@ -14,31 +14,13 @@
 #define U_MOUSE_MOVE_MAX 1500       
 #define U_MOUSE_SCROLL_MAX 20      
 
-#undef MOVE_UP
-#undef MOVE_DOWN
-#undef MOVE_LEFT
-#undef MOVE_RIGHT
-#define MOVE_UP MOVE_Y(-U_MOUSE_MOVE_MAX)
-#define MOVE_DOWN MOVE_Y(U_MOUSE_MOVE_MAX)
-#define MOVE_LEFT MOVE_X(-U_MOUSE_MOVE_MAX)
-#define MOVE_RIGHT MOVE_X(U_MOUSE_MOVE_MAX)
-
-#undef SCROLL_UP
-#undef SCROLL_DOWN
-#undef SCROLL_LEFT
-#undef SCROLL_RIGHT
-#define SCROLL_UP SCRL_Y(U_MOUSE_SCROLL_MAX)
-#define SCROLL_DOWN SCRL_Y(-U_MOUSE_SCROLL_MAX)
-#define SCROLL_LEFT SCRL_X(-U_MOUSE_SCROLL_MAX)
-#define SCROLL_RIGHT SCRL_X(U_MOUSE_SCROLL_MAX)
-
 #define MOUSE_LCLK &mkp LCLK
 #define MOUSE_RCLK &mkp RCLK
 #define MOUSE_MS_U &mmv MOVE_UP
 #define MOUSE_MS_D &mmv MOVE_DOWN
 #define MOUSE_MS_L &mmv MOVE_LEFT
 #define MOUSE_MS_R &mmv MOVE_RIGHT
-#define MOUSE_WH_U &msc SCROLL_UP
-#define MOUSE_WH_D &msc SCROLL_DOWN
-#define MOUSE_WH_L &msc SCROLL_LEFT
-#define MOUSE_WH_R &msc SCROLL_RIGHT
+#define MOUSE_WH_U &msc SCRL_UP
+#define MOUSE_WH_D &msc SCRL_DOWN
+#define MOUSE_WH_L &msc SCRL_LEFT
+#define MOUSE_WH_R &msc SCRL_RIGHT
