--- a/config/includes/behaviors_tristate.dtsi
+++ b/config/includes/behaviors_tristate.dtsi
@@ -1,12 +1,19 @@
 / {
 	   
     behaviors {
-        swap: swapper {
+        tri_cmd_tab: swapper_cmd {
+            compatible = "zmk,behavior-tri-state";
+            label = "SWAPPER";
+            #binding-cells = <0>;
+            bindings = <&kt LGUI>, <&kp TAB>, <&kt LGUI>;
+            ignored-key-positions = <LM4>;
+        };
+        tri_ctrl_tab: swapper_ctrl {
             compatible = "zmk,behavior-tri-state";
             label = "SWAPPER";
             #binding-cells = <0>;
             bindings = <&kt LCTRL>, <&kp TAB>, <&kt LCTRL>;
-            ignored-key-positions = <LT2>;
+            ignored-key-positions = <LM4>;
         };
     };
 
