--- a/config/includes/behaviors_tristate.dtsi
+++ b/config/includes/behaviors_tristate.dtsi
@@ -1,16 +1,18 @@
 / {
 	   
     behaviors {
-        tri_cmd_tab: swapper_cmd {
+			  
+        cmd_tab: swapper_cmd {
             compatible = "zmk,behavior-tri-state";
-            label = "SWAPPER";
+            label = "SWAPPER_CMD";
             #binding-cells = <0>;
             bindings = <&kt LGUI>, <&kp TAB>, <&kt LGUI>;
             ignored-key-positions = <LM4>;
         };
-        tri_ctrl_tab: swapper_ctrl {
+
+        ctrl_tab: swapper_ctrl {
             compatible = "zmk,behavior-tri-state";
-            label = "SWAPPER";
+            label = "SWAPPER_CTRL";
             #binding-cells = <0>;
             bindings = <&kt LCTRL>, <&kp TAB>, <&kt LCTRL>;
             ignored-key-positions = <LM4>;
