--- a/config/includes/mouse.dtsi
+++ b/config/includes/mouse.dtsi
@@ -10,9 +10,8 @@
   acceleration-exponent = <0>;      
   delay-ms = <0>;                   
 };
-
-#define U_MOUSE_MOVE_MAX 1500       
-#define U_MOUSE_SCROLL_MAX 20      
+#define ZMK_MOUSE_DEFAULT_MOVE_VAL 1500
+#define ZMK_MOUSE_DEFAULT_SCRL_VAL 20
 
 #define MOUSE_LCLK &mkp LCLK
 #define MOUSE_RCLK &mkp RCLK
