--- a/config/includes/behaviors_holdtaps.dtsi
+++ b/config/includes/behaviors_holdtaps.dtsi
@@ -19,6 +19,7 @@
             tapping-term-ms = <200>;
             quick-tap-ms = <300>; // if space is pressed again within 300ms,  holding would trigger space instead of meh
             bindings = <&kp>, <&kp>;
+            require-prior-idle-ms = <200>;
         };
 
         hyper: behavior_hyper {
@@ -29,6 +30,7 @@
             tapping-term-ms = <200>;
             quick-tap-ms = <300>; 
             bindings = <&kp>, <&kp>;
+            require-prior-idle-ms = <200>;
         };
 
         hm: homerow_mods {
