--- a/.github/workflows/draw-keymaps.yml
+++ b/.github/workflows/draw-keymaps.yml
@@ -13,13 +13,10 @@ on:
 jobs:
   draw:
     uses: caksoylar/keymap-drawer/.github/workflows/draw-zmk.yml@main
-    with:
-      # Use the triggering commit's message, prepending the "[Draw]" tag
-      commit_message: "[Draw] ${{ github.event.head_commit.message }}"
-      # …other inputs
     permissions:
       contents: write # allow workflow to commit to the repo
     with:
+      amend_commit: true
       keymap_patterns: "config/*.keymap" # path to the keymaps to parse
       config_path: "keymap_drawer.config.yaml" # config file, ignored if not exists
       output_folder: "keymap-drawer" # path to save produced SVG and keymap YAML files
