--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,9 @@
-on: [push, pull_request, workflow_dispatch]
+on:
+  push:
+    paths:
+      - "config"
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
