Update build.yml to build on certain branches

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Build zmk firmware
 on:
   push:
+    branches: 
+      - main
+      - 'feature/**'
     paths:
       - "config/**"
   pull_request:
