--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
 name: Build zmk firmware
 on:
   push:
-    branches: 
-      - main
-      - 'feature/**'
+    branches:
+      - master
+      - "feature/**"
     paths:
       - "config/**"
   pull_request:
