--- a/config/includes/mouse.dtsi
+++ b/config/includes/mouse.dtsi
@@ -24,3 +24,5 @@
 #define MOUSE_WH_D &msc SCRL_DOWN
 #define MOUSE_WH_L &msc SCRL_LEFT
 #define MOUSE_WH_R &msc SCRL_RIGHT
+#define ZOOM_IN &kp C_AC_ZOOM_IN
+#define ZOOM_OUT &kp C_AC_ZOOM_OUT
