test: see if this fixes lacks binding issue

--- a/config/includes/behaviors_tristate.dtsi
+++ b/config/includes/behaviors_tristate.dtsi
@@ -2,14 +2,14 @@
 	   
     behaviors {
 			  
-        cmd_tab: swapper_cmd {
+        cmd_tab: swapper {
             compatible = "zmk,behavior-tri-state";
             #binding-cells = <0>;
             bindings = <&kt LGUI>, <&kp TAB>, <&kt LGUI>;
             ignored-key-positions = <LB3>;
         };
 
-        ctrl_tab: swapper_ctrl {
+        ctrl_tab: swapper {
             compatible = "zmk,behavior-tri-state";
             #binding-cells = <0>;
             bindings = <&kt LCTRL>, <&kp TAB>, <&kt LCTRL>;
