--- a/config/includes/mouse.dtsi
+++ b/config/includes/mouse.dtsi
@@ -11,7 +11,9 @@
   delay-ms = <0>;                   
 };
 
+#undef ZMK_MOUSE_DEFAULT_MOVE_VAL
 #define ZMK_MOUSE_DEFAULT_MOVE_VAL 2500
+#undef ZMK_MOUSE_DEFAULT_SCRL_VAL
 #define ZMK_MOUSE_DEFAULT_SCRL_VAL 20
 
 #define MOUSE_LCLK &mkp LCLK
